--- a/axe_selenium_python/package.json
+++ b/axe_selenium_python/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axe-selenium-python",
+  "name": "axe-selenium-python-nhs-test",
   "version": "0.0.1",
   "description": "Integrate axe-core with python",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kimberlythegeek/axe-selenium-python.git"
+    "url": "git+https://github.com/ghufrankhan/axe-selenium-python.git"
   },
   "author": "Kimberly Sereduck",
   "license": "MPL-2.0",
