--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "axe-selenium-python",
-  "version": "0.0.1",
+  "name": "axe-selenium-python-nhs-test",
+  "version": "1.0.0",
   "description": "Integrate axe-core with python",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kimberlythegeek/axe-selenium-python.git"
+    "url": "git+https://github.com/ghufrankhan/axe-selenium-python.git"
   },
   "author": "Kimberly Sereduck",
   "license": "MPL-2.0",
