--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,6 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+    - name: Install wheel
+      run: |
+        python -m pip install --upgrade pip
+        pip install wheel
     - name: Build sdist
       run: |
         python setup.py sdist bdist_wheel
