--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axe-selenium-python-nhs-test",
+  "name": "axe-selenium-python",
   "version": "1.0.0",
   "description": "Integrate axe-core with python",
   "main": "index.js",
