--- a/axe_selenium_python/package.json
+++ b/axe_selenium_python/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axe-selenium-python-nhs-test",
+  "name": "axe-selenium-python",
   "version": "0.0.1",
   "description": "Integrate axe-core with python",
   "main": "index.js",
