--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,6 +27,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel
+    - name: npm
+      run: |
+        npm install
     - name: Build sdist
       run: |
         python setup.py sdist bdist_wheel
