--- a/package.json
+++ b/package.json
@@ -10,10 +10,5 @@
     "type": "git",
     "url": "git+https://github.com/ghufrankhan/axe-selenium-python.git"
   },
-  "author": "Kimberly Sereduck",
-  "license": "MPL-2.0",
-  "bugs": {
-    "url": "https://github.com/kimberlythegeek/axe-selenium-python/issues"
-  },
-  "homepage": "https://github.com/kimberlythegeek/axe-selenium-python#readme"
+  "license": "MPL-2.0"
 }
